# SafestStreets

./: README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_incidentmarker_creation_date_and_more.py  0003_incidentmarker_likes.py  0004_remove_incidentmarker_likes_markerrating_and_more.py  0005_remove_incidentmarker_rating_incidentmarker_dislikes_and_more.py  0006_markertag_incidentmarker_tags_delete_markerrating.py  0007_alter_incidentmarker_dislikes_and_more.py  0008_incidentmarker_description.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  requirements.txt  vite.config.js
frontend/src/: App.jsx  api.js  utils.js
frontend/src/components/: ErrorAlert.jsx  IncidentMarker.jsx  NavBar.jsx  ProtectedRoute.jsx
frontend/src/components/ui/: multi-select.jsx
frontend/src/components/ui/js/: multi-select.jsx
frontend/src/hooks/: useApiPrivate.js
frontend/src/pages/: HomePage.jsx  LoginPage.jsx  PageNotFoundPage.jsx  SignUpPage.jsx
